# Python-Flask-SQL

./: .env  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-DB  README.md  docker-compose.yml  optimized_db.sql  pyproject.toml  tree_base_db.sql
.github/workflows/: ci_cd.yml  dev.yml
app/: db.py  main.py  utils.py
app/blueprints/auth/: views.py
app/blueprints/core/: validators.py  views.py  views_tree.py
app/blueprints/rate_limit/: base.py
app/tests/: conftest.py  test_base_api.py  test_cache.py  test_invalid_inputs.py  test_smoke.py
scripts/: insert_admin_user.py  start.sh
